# gemma-cpp-enhanced

./: .gitignore  CLAUDE.md  CONSOLIDATION_SUMMARY.md  CRITICAL_REVIEW_FINDINGS.md  EXECUTION_SUMMARY.md  FINAL_PROJECT_STATUS.md  GEMMA_INTEGRATION_ANALYSIS.md  INTEGRATION_GUIDE.md  INTEGRATION_TODOS.md  MCP_SETUP_COMPLETE.md  MEMORY_SYSTEM_TEST_REPORT.md  MERGE_SUMMARY_20251031.md  RAG_REDIS_REORGANIZATION_SUMMARY.md  README.md  REPOSITORY_CONSOLIDATION_20251031.md  create-prs.ps1  llm.code-workspace  mcp.json  redis.conf  redis_6380.conf  test_memory_system.py  update_mcp_config.py  validate_mcp_setup.py
gemma/: --debug-output  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  BUILD.md  BUILD_AUTOMATION_SYSTEM.md  BUILD_DEPLOYMENT_REPORT.md  BUILD_DEPLOY_SOLUTION.md  BUILD_ENVIRONMENT.md  BUILD_FIX_SUMMARY.md  BUILD_GUIDE_ONEAPI_CUDA.md  BUILD_INTEL.md  BUILD_OPTIMIZATION_GUIDE.md  BUILD_STATUS_SUMMARY.md  BUILD_TROUBLESHOOTING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW_GEMINI.md  COMMIT_MESSAGE.txt  COMPILATION_FIXES_SUMMARY.md  COMPLETED_DELIVERABLES.md  CONFIGURATION_CHANGES_SUMMARY.md  CONSOLIDATION_REPORT.md  CRITICAL_REVIEW.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_OPTIMIZATION.md  Dockerfile  Dockerfile.optimized  Doxyfile  GEMINI.md  GEMINI_ANALYSIS.md  GEMMA.md  GEMMA_BUILD_SUCCESS.md  GEMMA_CLI_DESIGN_SYSTEM.md  GEMMA_CLI_USAGE.md  HIGHWAY_INTEGRATION_SUMMARY.md  HIGHWAY_SCALAR_FALLBACK_FIXES.md  HIGHWAY_SIMD_ANALYSIS.md  (+140 more)
gemma/.claude/: CLAUDE.md  memory.json  settings.local.json
gemma/.context/: gemma-cpp-project-context-2025-09-22.md
gemma/.github/: copilot-instructions.md  pull_request_template.md
gemma/.taskmaster/: state.json
gemma/backends/: CMakeLists.txt  README.md  backend_interface.cpp  backend_interface.h  backend_manager.cpp  backend_manager.h  backend_registry.cpp  backend_registry.h
gemma/cmake/: BuildAcceleration.cmake  Dependencies.cmake  FindCUDAToolkitEnhanced.cmake  FindIntelSYCL.cmake  FindVcpkgPackages.cmake  FindVulkanEnhanced.cmake  GemmaConfig.cmake.in  GemmaOptimizations.cmake  IntelOneAPIConfig.cmake  IntelToolchain.cmake  OneAPILibs.cmake  VcpkgHelper.cmake  Version.cmake  intel_perf_monitor.h.in  patch_sentencepiece.cmake  version.h.in
gemma/config/: config.example.toml  config.toml  mcp_servers.toml
gemma/deploy/: DEPLOYMENT_GUIDE.md  README.txt  TEST_FRAMEWORK_README.md  test_results_20251023_083942.txt  test_session_enhanced.sh  test_session_persistence.ps1  test_session_persistence.sh
gemma/docs/: ARCHITECTURE.md  ONBOARDING.md  PROMPT_SYSTEM.md  RAG_OPTIMIZATIONS.md  REFACTORING.md  SESSION_REFACTORING_PLAN.md
gemma/examples/: 1_code_review.py  2_doc_generator.py  3_test_generator.py  4_bug_triage.py  5_refactoring.py  README.md  chat_examples.py  demo_rag_commands.py  rag_optimizations_example.py  run_demo.sh  test.cpp
gemma/gemma.cpp/: .bazelrc  BUILD.bazel  BUILD_OPTIMIZATION_GUIDE_WINDOWS.md  CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_original.txt  CMakePresets_intel.json  QUICK_START.md  WINDOWS_BUILD_SUCCESS.md  WINDOWS_BUILD_SUMMARY.md  build.sh  build_nmake.bat  build_vs.bat  build_windows_optimized.sh  c_api.h  highway_scalar_fallback_complete.h  highway_scalar_fallback_windows.h  highway_scalar_fallback_windows.h.bak  pch.cpp  pch.h  run.cc  setup_ccache.sh  test_scalar_compilation.cpp  test_scalar_include.cpp
gemma/mcp/: CMakeLists.txt  MOVED_TO_MCP_GEMMA.md  README.md
gemma/mcp-server/: MOVED_TO_MCP_GEMMA.md  gemma_mcp_server.py
gemma/scripts/: build-msvc-simple.ps1  build-oneapi-cuda-fastdebug.ps1  build_all_backends.sh  build_oneapi_ninja.ps1  build_with_cuda.sh  build_with_sycl.sh  build_with_vulkan.sh  download-kaggle-model.sh  monitor-build.ps1  run_gemma_cli.py  setup-build-env.ps1  verify_onboarding.py
gemma/tests/: CMakeLists.txt  README.md  TESTING_GUIDE.md  TEST_FRAMEWORK.md  run_tests.sh  test_framework_example.py  test_mcp_client.py  test_onboarding.py  test_prompts.py  test_rag_optimizations.py
gemma/tools/: CMakeLists.txt  file_watcher.py  ruff_formatter.py
gemma_cli_project/: README.md  pyproject.toml  run_tests.py  run_tests_from_python.py  test.txt
gemma_cli_project/gemma_cli_venv/: pyvenv.cfg
gemma_cli_project/tests/: test_cli.py  test_rag.py
mcp-gemma/: ARCHITECTURE.md  CONSOLIDATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_CONSOLIDATED.md  build.py  pyproject.toml  pyproject.toml.backup  requirements-optional.txt  requirements.txt  test_syntax.py
mcp-gemma/client/: __init__.py  base_client.py  http_client.py  stdio_client.py  transport_adapters.py  websocket_client.py
mcp-gemma/config/: client_config.yaml  mcp_integration.json  server_config.yaml
mcp-gemma/cpp-server/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  COMPLETION_SUMMARY.md  IMPLEMENTATION_DETAILS.md  example_client.js  mcp_server.cpp  mcp_server.h  mcp_stdio_server.cpp  model_manager.cpp
mcp-gemma/examples/: __init__.py  demo_client.py
mcp-gemma/integration/: rag_redis_integration.py  stats_integration.py
mcp-gemma/scripts/: setup-environment.ps1  start-server.ps1  test-server.ps1
mcp-gemma/server/: __init__.py  base.py  handlers.py  (+6 more)
stats/: .env.example  .env.template  .gitignore  .isort.cfg  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAMS.md  AUTO_CLAUDE_FIX_REPORT.md  CLAUDE.md  CLICK_CLI_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  COVERAGE_ANALYSIS_REPORT.md  COVERAGE_SOLUTION.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  Dockerfile  Dockerfile.production  FILES_CREATED.md  GEMMA_CLI_REFACTORING.md  GEMMA_INTEGRATION_TEST_REPORT.md  HYBRID_RAG_ADAPTER_IMPLEMENTATION.md  LOGGING_STANDARDIZATION.md  MCP_TEST_FRAMEWORK.md  PHASE4_2_IMPLEMENTATION_SUMMARY.md  PRE_COMMIT_GUIDE.md  PROJECT_STATUS.md  QUICK_START_MODEL_MANAGEMENT.md  RAG_MCP_INTEGRATION_SUMMARY.md  REACT_AGENT_CODING_DEMO_SUMMARY.md  README.md  RUST_TESTING_SUMMARY.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION.md  SECURITY_IMPROVEMENTS.md  SECURITY_TODOS.md  TODO.md  USAGE_EXAMPLES.md  demo_native_gemma.py  deny.toml  (+28 more)
(+858 files in other folders)
